--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
+html, body {
+    box-sizing: border-box;
+    margin: 0; padding: 0;
+    max-width: 100%;
+    overflow-x: hidden;
+    scroll-behavior: smooth;}
+
+* {-webkit-tap-highlight-color: transparent;}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    position: relative;
+    font-family: 'Oswald', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+section * {
+    transition: all 0.5s ease;
 }
+
+a {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+/* - - - - - Screen Query - - - - - */
+@media screen and (max-width: 1000px) {
+    .container {
+        max-width: 100%;
+    }
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600;700&display=swap');
